<resources>
    <string name="app_name">SmartMemory</string>
    <string name="title">MEMORY CRAFT</string>
    <string name="play">Play</string>
    <string name="stat">Statistics</string>
    <string name="action_settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="feedback">0 / 0</string>
    <string name="timer">00 : 00</string>
    <string name="score">SCORE</string>
    <string name="scoreNb">436</string>
    <string name="enterUsername">Enter Username here</string>
    <string name="register">Register</string>
    <string name="skip">Skip</string>
    <string name="scoreRegistered">Score registered</string>
    <string name="scoreNonRegistered">Impossible to save score</string>
    <string name="delete_player_title">Delete Player</string>
    <string name="delete_player_text">Would you delete this player</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="gridSize">Grid size</string>
    <string name="QxQ">4x4</string>
    <string name="TxT">3x3</string>
    <string name="QxT">4x3</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
