<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.example.oussama.smartmemory.fragment.SettingGame">

    <TextView android:text="@string/gridSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:layout_gravity="center"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="82dp" >

        <RadioButton
            android:id="@+id/radio33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/TxT" />

        <RadioButton
            android:id="@+id/radio44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/QxQ" />

        <RadioButton
            android:id="@+id/radio45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/QxC" />

    </RadioGroup>


</LinearLayout>
