<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:background="@drawable/background_black">

    <TextView android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:layout_gravity="center"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/mc_time"
            android:gravity="center"
            android:textColor="#f4a460"
            android:textSize="10pt"
            android:layout_width="160dip"
            android:layout_height="40dip"
            android:text="@string/timer" />

        <TextView
            android:id="@+id/mc_feedback"
            android:gravity="center"
            android:layout_marginLeft="60dp"
            android:textColor="#f4a460"
            android:textSize="10pt"
            android:layout_width="160dip"
            android:layout_height="40dip"
            android:text="@string/feedback" />

    </LinearLayout>

<LinearLayout
    android:layout_marginTop="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/mc0"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:background="@drawable/memory_back" />

    <Button
        android:id="@+id/mc1"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:background="@drawable/memory_back" />

    <Button
        android:id="@+id/mc2"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:background="@drawable/memory_back" />

    <Button
        android:id="@+id/mc3"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:background="@drawable/memory_back" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/mc4"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:background="@drawable/memory_back" />

    <Button
        android:id="@+id/mc5"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:background="@drawable/memory_back" />

    <Button
        android:id="@+id/mc6"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:background="@drawable/memory_back" />

    <Button
        android:id="@+id/mc7"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:background="@drawable/memory_back" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/mc8"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:background="@drawable/memory_back" />

    <Button
        android:id="@+id/mc9"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:background="@drawable/memory_back" />

    <Button
        android:id="@+id/mc10"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:background="@drawable/memory_back" />

    <Button
        android:id="@+id/mc11"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:background="@drawable/memory_back" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/mc12"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:background="@drawable/memory_back" />

    <Button
        android:id="@+id/mc13"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:background="@drawable/memory_back" />

    <Button
        android:id="@+id/mc14"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:background="@drawable/memory_back" />

    <Button
        android:id="@+id/mc15"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:background="@drawable/memory_back" />
</LinearLayout>

</LinearLayout>